Crud de produto e comanda finalizados, inicio da tela inicial
